# nfl_api_client

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: CHANGELOG.md  api_overview.md  api_reference.md  custom-styles.css  data_access.md  game_officials.md  game_team_stats.md  guide.md  index.md  parameters.md  player_career_stats.md  player_gamelog.md  reference.md  request_config.md  scoring_plays.md  season_standings.md  season_standings_expanded.md  season_standings_playoffs.md  stats_leaders.md  team_depth_chart.md  team_roster.md  team_schedule.md
examples/: draft_summary.py  player_stats.py  season_standings.py  static.py  stats_leaders.py  team_depth_chart.py  team_roster.py  team_schedule.py
notes/: api_overview.md  foo.md  player_season_stats.md
src/nfl_api/client/: http_client.py
src/nfl_api/endpoints/: _base.py  current_team_player_roster.py  draft_summary.py  player_stats.py  season_standings.py  team_depth_chart.py  team_schedule.py
src/nfl_api/lib/: data.py  domain_registry.py  parameters.py
src/nfl_api/scripts/: generate_active_players.py
src/nfl_api/static/: players.py
src/nfl_api_client/_client/: _http_client.py
src/nfl_api_client/_scripts/: generate_players.py
src/nfl_api_client/data_sets/: dataset.py  dataset_container.py
src/nfl_api_client/endpoints/: _base.py  draft_summary.py  game_officials.py  game_summary.py  game_team_stats.py  league_game_finder.py  player_career_basic_stats.py  player_career_stats.py  (+11 more)
tests/: test_season_standings.py  test_team_depth_chart.py  test_team_roster.py
(+21 files in other folders)
