[project]
name = "nfl-api"
version = "0.1.0"
description = "API client package for accessing NFL data on ESPN's API endpoints"
authors = [
    {name = "Hayden D'Souza"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pandas (>=2.3.0,<3.0.0)"
]
packages = [{ include = "nfl_api", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

